--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ p {
 a {
   text-decoration: none;
   color: white;
+  font-family: 'Epilouge', sans-serif;
 }
 
 /* Burger-Menu */
@@ -176,7 +177,7 @@ a {
 .hero-praktiskinfo {
   height: 40vh;
   background: var(--FreshMint);
-  margin-top: 75px;
+  
 }
 
 /* Footer */
@@ -184,22 +185,67 @@ a {
 footer {
   margin-top: 60px;
   width: 100%;
-  height: 400px;
+  padding: var(--stdSpacer);
   background-color: var(--DeepForest);
-  text-align: center;
-  padding-top: 50%;
   color: white;
 }
+
+section h6 {
+  color: white;
+  font-size: 1rem;
+}
+
+.NyttigLinks {
+  display: flex;
+  flex-direction: column;
+  padding: var(--stdSpacer);
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.NyttigLinks a {
+  text-decoration: underline;
+  color: white;
+  font-family: 'Epilouge', sans-serif;
+}
+
+.NyttigKontakt {
+  display: flex;
+  flex-direction: column;
+  padding: var(--stdSpacer);
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.NyttigKontakt a {
+  text-decoration: underline;
+}
+.SomeLinks {
+  padding: var(--stdSpacer);
+}
+.fa-brands {
+  font-size: 4rem;
+  padding-right: 20px;
+}
+
+.Copyright {
+  text-align: center;
+}
+
 
 /* ==================
         Index 
 ===================== */
 
+.Headings {
+  background-color: var(--PaleStone);
+}
+
 h1 {
   font-size: var(--font-size-xlarge);
-  text-align: center;
-  margin: var(--lgSpacer) 0;
-  padding: 0;
+background-color: var(--PaleStone);
+  margin: 0;
+  padding: 90px var(--stdSpacer) 20px var(--stdSpacer);
 }
 
 .fill-image {
@@ -227,6 +273,7 @@ article {
   padding: 10px;
   margin-left: auto;
   margin-right: 10px;
+  margin-top: 10px;
   font-family: "Epilogue", sans-serif;
 }
 
@@ -248,7 +295,7 @@ section h4 {
 }
 .spons-wrap {
   display: flex;
-  gap: 10px;
+  gap: 20px;
   justify-content: center;
 }
 
@@ -316,6 +363,10 @@ section h4 {
 /* ==================
         Medlemsside 
 ===================== */
+
+#LoginH1 {
+  padding: var(--stdSpacer);
+}
 
 #medlemsside {
   display: flex;
