--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --DeepForest: #2e4600;
   --FernGreen: #588c42;
