Begyndt på M.querires

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@
   --FreshMint: #82b56d;
   --ClearSky: #87ceeb;
   --PaleStone: #f5f1e4;
-
   --smSpacer: 15px;
   --stdSpacer: 20px;
   --lgSpacer: 40px;
@@ -419,6 +418,23 @@ input {
 /* ==================
         Index 
 ===================== */
+
+@media screen and (min-width: 390px) {
+ .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--smSpacer);
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+
+
+
+
+
+
 /* ==================
         Nyt Medlem 
 ===================== */
