Forsat på m.queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,14 +419,22 @@ input {
         Index 
 ===================== */
 
-@media screen and (min-width: 390px) {
- .cards {
+@media screen and (min-width: 391px) {
+  .body { 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: var(--smSpacer);
-    max-width: 1200px;
-    margin: 0 auto;
+    grid-template-columns: repeat(4, 1fr);
+    overflow: hidden;
   }
+
+ .cards {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 20px;
+   padding-left: 35px;
+   padding-right: 35px;
+   margin: 0 auto;
+ }
+
 }
 
 
