--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,14 +177,8 @@ a {
 
 /* Hero Image */
 
-.hero-index,
-.hero-klubhaandbog,
-.hero-nytmedlem,
-.hero-aktiviteter,
-.hero-praktiskinfo {
-  height: 40vh;
-  background: var(--FreshMint);
-  
+.hero-index {
+  background-image: url(../img/);
 }
 
 /* Footer */
@@ -199,14 +193,13 @@ footer {
 
 section h6 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .NyttigLinks {
   display: flex;
   flex-direction: column;
   padding: var(--stdSpacer);
-  align-items: flex-start;
   gap: 20px;
 }
 
@@ -220,7 +213,6 @@ section h6 {
   display: flex;
   flex-direction: column;
   padding: var(--stdSpacer);
-  align-items: flex-start;
   gap: 20px;
 }
 
@@ -282,6 +274,7 @@ article {
   margin-right: 10px;
   margin-top: 10px;
   font-family: "Epilogue", sans-serif;
+  font-weight: bold;
 }
 
 .nyhedsbrev {
@@ -343,11 +336,11 @@ section h4 {
 }
 
 .card-container {
-  max-width: 390px;
   margin: 0 auto;
 }
+
 .card{
-  padding: var(--stdSpacer);
+  padding-bottom: var(--stdSpacer);
 }
 
 .card a {
@@ -357,7 +350,7 @@ section h4 {
 .card img {
   width: 75px;
   border-radius: var(--smSpacer);
-  margin-bottom: var(--smSpacer);
+  /* margin-bottom: var(--smSpacer); */
 }
 
 .card h3 {
@@ -393,9 +386,13 @@ section h4 {
   box-shadow: 2px 2px 8px #2e460088;
   width: 300px;
   text-align: center;
+  margin-top: var(--lgSpacer);
 }
 
-/* Kan det her virkeligt passe? */
+.login-box p {
+  padding-bottom: 15px;
+  padding-top: 0;
+}
 
 label {
   display: block;
@@ -431,18 +428,13 @@ input {
 ===================== */
 
 @media screen and (min-width: 391px) {
-  .body { 
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    overflow: hidden;
-  }
-
 
   .button:hover {
     background-color: var(--FreshMint);
-    scale: 120%;
+    scale: 110%;
     transition: all 0.3s;
   }
+
 
   .navbar-mobile {
     display: none;
@@ -457,10 +449,14 @@ input {
     height: 75px;
   }
 
+  .menu-desktop li a {
+    font-size: 20px;
+  }
+
   .logo-desktop img {
-    width: 55px;
+    width: 65px;
     display: block;
-    margin-left: 20px;
+    margin-left: 40px;
     margin-top: 10px;
   }
 
@@ -475,6 +471,13 @@ input {
     color: var(--DeepForest);
   }
   
+.Headings h1 {
+  padding-top: 90px;
+  padding-left: 40px;
+  width: 75%;
+  margin: 0 auto;
+}
+
  .cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
@@ -483,6 +486,47 @@ input {
    padding-right: 35px;
    margin: 0 auto;
  }
+
+.desktop-max-width {
+  max-width: 75%;
+  margin: 0 auto;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 60px;
+}
+
+.Copyright {
+  grid-row: 2;
+  grid-column: span 3;  
+}
+
+.fa-brands {
+      font-size: 4rem;
+      padding-right: 20px;
+    }
+
+  .SomeLinks {
+    margin-left: auto;
+  }
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+}
+
+.card {
+  border: 3px solid var(--PaleStone);
+  border-radius: 1rem;
+  padding: var(--smSpacer);
+}
+
+.kontaktpersoner {
+  padding: 0;
+}
 
 }
 
